# AreaExtractor

./: README.md  pyproject.toml
docs/: address.txt  installation.txt  note.svgz
src/AreaExtractor/: AE.py
src/AreaExtractor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: tester.ipynb
